--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,11 @@
-flask
-gunicorn
+Flask
+flask-cors
 pymongo
+python-dotenv
+bcrypt
+PyJWT
+bson
+gunicorn
 requests
 pandas
 openpyxl
-flask_cors
-bcrypt
