--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.4.0",
+    "@auth0/nextjs-auth0": "^4.9.0",
     "axios": "^1.12.0",
     "next": "15.5.3",
     "react": "19.1.0",
