--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,16 @@
     "@auth0/nextjs-auth0": "^4.9.0",
     "axios": "^1.12.0",
     "next": "15.5.3",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
