--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "@auth0/auth0-react": "^2.4.0",
     "@auth0/nextjs-auth0": "^4.9.0",
     "axios": "^1.12.0",
+    "framer-motion": "^12.23.13",
     "next": "15.5.3",
     "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-simple-typewriter": "^5.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -23,7 +25,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "^19",
+    "@types/react": "^19.1.13",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
