--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@auth0/nextjs-auth0": "^4.9.0",
     "axios": "^1.12.0",
     "framer-motion": "^12.23.13",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "xlsx": "^0.18.5"
   },
