--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.12.0",
     "framer-motion": "^12.23.13",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^15.5.3",
     "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
